--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,23 @@
-# Cache and logs (Symfony2)
-/app/cache/*
-/app/logs/*
-!app/cache/.gitkeep
-!app/logs/.gitkeep
-
 # Email spool folder
 /app/spool/*
 
 # Cache, session files and logs (Symfony3)
 /var/cache/*
-/var/logs/*
+/var/log/*
 /var/sessions/*
 !var/cache/.gitkeep
 !var/logs/.gitkeep
 !var/sessions/.gitkeep
 
 # Parameters
-/app/config/parameters.yml
-/app/config/parameters.ini
+.env
+.env.test
 
 # Managed by Composer
 /app/bootstrap.php.cache
 /var/bootstrap.php.cache
 /bin/*
-!bin/console
-!bin/symfony_requirements
+!/bin/console
 /vendor/
 
 # Assets and user uploads
@@ -32,8 +25,8 @@
 /web/uploads/
 
 # PHPUnit
-/app/phpunit.xml
 /phpunit.xml
+/phpunit.xml.dist
 
 # Build data
 /build/
