Ajout connection user

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,4 +1,8 @@
 framework:
+  #  templating:        # this lines TEST AJOUT
+  #  engines: ['twig', 'php']   # this lines TEST AJOUT  
+
+
     secret: '%env(APP_SECRET)%'
     #default_locale: en
     #csrf_protection: true
