--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"  #AJOUT
+app_logout:    #AJOUT
+    path: /logout  #AJOUT
+    methods: GET  #AJOUT  
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
